# ER_Telecom_qualification

./: .gitignore  CMakeLists.txt  README.md  problem.txt  utils.cmake
bench_results/: Cache.txt  DnsCache.txt  MXs.txt  Mx.txt  Rcu.txt  all.txt  bench_without_spinlock.txt  rcu_spin.txt  rcu_std.txt  shared_mutex_vs_spinlock_rw.txt  shared_mx_spinlockrw.7z  shared_mx_std.7z
cmake/: utils.cmake
net_utils/: CMakeLists.txt  ConcurrencyUtils.hpp  DnsCache.hpp  DnsCacheImpl.hpp  DnsCacheInterface.hpp  IterativeAverage.hpp  LruStorage.hpp  LruStorageLockFree.hpp  PriorityMutex.hpp  RcuLruStorage.hpp  RcuStorage.hpp  Singleton.hpp  SpinlockRW.hpp  utils.hpp
net_utils/aux/: DnsCacheFixture.hpp  IterationRate.hpp  MultiThreadedFixture.hpp  MultiThreadedRWFixture.hpp  MultiThreadedRWValuedFixture.hpp  PriorityMutexFixture.hpp  RcuStorageFixture.hpp  SpinlockRWFixture.hpp
net_utils/bench/: CMakeLists.txt  DnsCache.cpp  DnsCacheImpl.cpp  PriorityMutex.cpp  RcuStorage.cpp  RcuStorage_SpinlockRW.cpp  RcuStorage_stdMX.cpp  SharedMX_SpinlockRW.cpp  SharedMX_std.cpp  SharedMX_stdMX.cpp  SpinlockRW.cpp  common.hpp  main.cpp
net_utils/src/: DnsCache.cpp  DnsCacheImpl.cpp
net_utils/tests/: CMakeLists.txt  DnsCache.cpp  IterativeAverage.cpp  LruStorage.cpp  MultiThreadedFixture.hpp  PriorityMutex.cpp  RcuStorage.cpp  SpinlockRW.cpp  common.cpp  tests_general.cpp
