cmake_minimum_required(VERSION 3.24)

set(PROJECT_NAME net_utils)
string(TOUPPER "${PROJECT_NAME}" PROJECT_NAME_UP_CASE)

function(define_head_variable name value type)
  set(var ${PROJECT_NAME_UP_CASE}_${name})
  if(ARGC GREATER_EQUAL 4 AND NOT "${PROJECT_NAME}" STREQUAL "")
    set(doc "${ARGV3} defined in ${PROJECT_NAME}.")
  endif()
  set(${var} "${value}" CACHE ${type} "${doc}")
  set(out_var last_head_var)
  if(ARGC GREATER_EQUAL 5)
    set(out_var ${ARGV4})
  endif()
  set(${out_var} "${${var}}" PARENT_SCOPE)
endfunction()

project(${PROJECT_NAME} LANGUAGES CXX)
define_head_variable(RESEARCH ${PROJECT_IS_TOP_LEVEL} BOOL) # TODO: disable
if(${last_head_var})
  set(CMAKE_CXX_STANDARD 17)
else()
  set(CMAKE_CXX_STANDARD 17)
endif()
set(CMAKE_CXX_STANDARD_REQUIRED ON)

option(BUILD_TESTING "Enable testing" ${PROJECT_IS_TOP_LEVEL})
define_head_variable(GTEST_VERSION 1.15.2 STRING)
define_head_variable(GBENCH_VERSION 1.9.0 STRING)
define_head_variable(RESEARCH_GBENCH_SAN ON BOOL "Use sanitizers for benchmarking")
define_head_variable(DNS_CACHE_REC_LIMIT 1000 STRING)
define_head_variable(SANITIZERS "address;thread;ub;leak;mem" STRING)
if(BUILD_TESTING AND NOT "${last_head_var}" STREQUAL "")
  if(NOT BUILD_SHARED_LIBS)
    message(STATUS "BUILD_SHARED_LIBS needed for sanitize. Forced enabled.")
    set(BUILD_SHARED_LIBS ON CACHE BOOL "" FORCE)
  endif()
  enable_testing()
endif()


add_subdirectory(net_utils)
